fix: header on small/big screens

--- a/src/index.css
+++ b/src/index.css
@@ -106,4 +106,9 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  html,
+  body {
+    @apply overflow-x-hidden;
+  }
 }
